--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Date-Mov",
+  "name": "dateMov",
   "version": "1.0.0",
   "description": "",
   "main": "are you need it.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node runIt.js"
   },
   "repository": {
     "type": "git",
